refactor: улучшена работа истории тасков